<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="vertical"
    android:background="@drawable/touch_selector"
    android:paddingLeft="@dimen/list_item_extra_padding"
    android:paddingRight="@dimen/list_item_extra_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingBottom="20dp"
        android:orientation="vertical">
        <!--android:src="@drawable/ic_dashboard_black_24dp"-->


        <RelativeLayout
            android:layout_height="match_parent"
           android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stagename"
                android:layout_width="wrap_content"
android:padding="4dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"


                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/createdOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" android:hint="@string/hint_createdOn"
                android:gravity="end"

                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                android:layout_alignParentEnd="true" />
</RelativeLayout>

            <TextView android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
            android:textSize="16sp"/>
<LinearLayout android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:paddingRight="8dp"
        android:id="@+id/category" android:hint="@string/hint_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"

        android:textColor="@color/secondary_text"/>
    <TextView
        android:id="@+id/assignedTo" android:hint="@string/hint_assignedTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/secondary_text"/>
</LinearLayout>

        </LinearLayout>
        <TextView android:layout_width="0dp" android:layout_height="0dp"
            android:visibility="invisible" android:id="@+id/ticketid"></TextView>
        <TextView android:layout_width="0dp" android:layout_height="0dp"
        android:visibility="invisible" android:id="@+id/positionId"></TextView>




<View
    android:layout_width="match_parent" android:background="@color/grey"
    android:layout_height="1dp" ></View>
</LinearLayout>